istioctl/cmd/testdata/webhook/example-mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: protomutateWebhook
  name: protomutate
webhooks:
  - clientConfig:
      caBundle: ""
      service:
        name: protomutate
        namespace: istio-system
        path: /inject
    failurePolicy: Fail
    name: protomutate.istio.io
    namespaceSelector:
      matchLabels:
        protomutate-injection: enabled
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: Unknown
    admissionReviewVersions: ["v1", "v1beta1"]
