istioctl/cmd/testdata/webhook/example-validating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: protovalidateWebhook
  name: protovalidate
webhooks:
  - clientConfig:
      caBundle: ""
      service:
        name: protovalidate
        namespace: istio-system
        path: /validate
    failurePolicy: Fail
    name: protovalidate.istio.io
    admissionReviewVersions: ["v1", "v1beta1"]
    namespaceSelector:
      matchLabels:
        protovalidate-validation: enabled
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: Unknown
